--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
