--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "standard": "^17.1.0",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
 }
